fix: strange spacing on code blocks
Fixes (#2)

This is a pretty dirty fix, and I would like to figure out a proper way of doing this.

When the content of the code block triggers horizontal scrolling, the overflow doesn't respect the padding value set by the parent pre element.

A way around this is to add margin right to each line by selecting the data-line attribute. We are using 16px to match the padding set on the pre element.

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,34 +1,33 @@
 .light pre[data-theme*=" "] {
   background-color: var(--shiki-light-bg);
-  position: relative;
 }
 
 .light code[data-theme*=" "] span {
   color: var(--shiki-light);
-  position: relative;
+}
+
+span[data-line] {
+  @apply mr-4;
 }
 
 .dark pre[data-theme*=" "] {
   background-color: var(--shiki-dark-bg);
-  position: relative;
 }
 
 .dark code[data-theme*=" "] span {
   color: var(--shiki-dark);
-  position: relative;
 }
 
-
-h2>a.subheading-anchor {
-  @apply text-xl
+h2 > a.subheading-anchor {
+  @apply text-xl;
 }
 
-h3>a.subheading-anchor {
-  @apply text-lg
+h3 > a.subheading-anchor {
+  @apply text-lg;
 }
 
 .subheading-anchor {
-  @apply no-underline font-bold text-light-heading dark:text-dark-heading;
+  @apply font-bold text-light-heading no-underline dark:text-dark-heading;
 }
 
 :root {
@@ -62,6 +61,6 @@ h3>a.subheading-anchor {
   align-items: center;
 }
 
-.markdown-alert-header>svg {
+.markdown-alert-header > svg {
   margin-right: 8px;
 }
